# ovkit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
docs/: Makefile  api.rst  conf.py  cookbook.md  guide.md  index.md  models.md  requirements.txt  usage.md
docs/_static/: custom.css
docs/_templates/: lang-switch.html
docs/ko/: api.rst  conf.py  cookbook.md  guide.md  index.md  models.md  usage.md
docs/ko/_templates/: lang-switch.html
examples/: README.md  denoise_audio.py  llm.py  predict.py  requirements.txt  stt.py  tts.py  web_app.py  webcam_demo.py
scripts/: build_mirror.py  representatives.yaml  selfcheck.py  verify_mirror.py
scripts/mirror_extra/: detect.yaml  face.yaml
src/ovkit/: __init__.py  __main__.py
src/ovkit/core/: __init__.py  backend.py  constants.py  convert.py  download.py  errors.py  model.py  registry.py  results.py  tasks.py
src/ovkit/face/: __init__.py  analyzer.py
src/ovkit/genai/: __init__.py  pipelines.py
src/ovkit/image/: __init__.py  ops.py
src/ovkit/manifests/: aliases.yaml  genai.yaml  models.yaml  omz.yaml
src/ovkit/recognize/: __init__.py  base.py  classify.py  detect.py  face.py  generic.py  ocr.py  pose.py  segment.py
src/ovkit/solutions/: __init__.py  anomaly.py  ocr.py  reid.py  tracking.py
tests/: conftest.py  test_backend_channels.py  test_classify_smoke.py  test_detect_smoke.py  test_download.py  test_face_adapter.py  test_genai.py  test_generic_smoke.py  test_instance_ocr_smoke.py  test_plot_smoke.py  test_pose_smoke.py  test_registry.py  test_segment_smoke.py  test_ssd_smoke.py  test_tasks.py
