[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ovkit"
version = "0.1.0"
description = "Use OpenVINO as easily as Ultralytics: one import, one Model class, clean Results — with AUTO/NPU, async, and INT8."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ovkit contributors" }]
keywords = ["openvino", "inference", "computer-vision", "detection", "npu", "quantization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "openvino>=2024.0",
    "numpy>=1.21",
    "opencv-python-headless>=4.5",
    "pillow>=9.0",
    "pyyaml>=6.0",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
genai = ["openvino-genai", "optimum-intel"]
anomaly = ["anomalib"]
quant = ["nncf"]
all = ["openvino-genai", "optimum-intel", "anomalib", "nncf"]
dev = ["pytest>=7", "ruff", "black"]

[project.urls]
Homepage = "https://github.com/leeyunjai82/ovkit"
Repository = "https://github.com/leeyunjai82/ovkit"

[project.scripts]
ovkit = "ovkit.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ovkit"]

[tool.hatch.build.targets.sdist]
include = ["src/ovkit", "README.md", "LICENSE"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
